@@ -327,6 +327,19 @@ public class InertialTypes : global::System.IDisposable {
     SIGNAL_QUALITY_FULLY_LOCKED = 0x05
   }
 
+  public enum OverrangeStatusBitmask {
+    OVERRANGE_ACCEL_X = 0b0000000000000001,
+    OVERRANGE_ACCEL_Y = 0b0000000000000010,
+    OVERRANGE_ACCEL_Z = 0b0000000000000100,
+    OVERRANGE_GYRO_X = 0b0000000000010000,
+    OVERRANGE_GYRO_Y = 0b0000000000100000,
+    OVERRANGE_GYRO_Z = 0b0000000001000000,
+    OVERRANGE_MAG_X = 0b0000000100000000,
+    OVERRANGE_MAG_Y = 0b0000001000000000,
+    OVERRANGE_MAG_Z = 0b0000010000000000,
+    OVERRANGE_PRESSURE = 0b0001000000000000
+  }
+
 }
 
 }
