@@ -182,6 +182,7 @@ public class MipTypes : global::System.IDisposable {
     CMD_EVENT_CONTROL = 0x0C2B,
     CMD_EVENT_TRIGGER_STATUS = 0x0C2C,
     CMD_EVENT_TRIGGER_CONFIGURATION = 0x0C2E,
+    CMD_EVENT_ACTION_CONFIGURATION = 0x0C2F,
     CMD_SAVE_STARTUP_SETTINGS = 0x0C30,
     CMD_EF_SENS_VEHIC_FRAME_TRANSFORM_EULER = 0x0C31,
     CMD_EF_SENS_VEHIC_FRAME_TRANSFORM_QUAT = 0x0C32,
@@ -296,6 +297,7 @@ public class MipTypes : global::System.IDisposable {
     CH_FIELD_SENSOR_TEMPERATURE_STATISTICS = 0x8014,
     CH_FIELD_SENSOR_RAW_AMBIENT_PRESSURE = 0x8016,
     CH_FIELD_SENSOR_SCALED_AMBIENT_PRESSURE = 0x8017,
+    CH_FIELD_SENSOR_OVERRANGE_STATUS = 0x8018,
     CH_FIELD_SENSOR_ODOMETER_DATA = 0x8040,
     CH_FIELD_SENSOR_SHARED_EVENT_SOURCE = 0x80D0,
     CH_FIELD_SENSOR_SHARED_TICKS = 0x80D1,
@@ -537,7 +539,9 @@ public class MipTypes : global::System.IDisposable {
     CH_FIELD_GNSS_5_SHARED_DELTA_TICKS = 0x95D2,
     CH_FIELD_GNSS_5_SHARED_GPS_TIMESTAMP = 0x95D3,
     CH_FIELD_GNSS_5_SHARED_DELTA_TIMESTAMP = 0x95D4,
+    CH_FIELD_SYSTEM_TIME_SYNC_STATUS = 0xA002,
     CH_FIELD_SYSTEM_GPIO_STATE = 0xA003,
+    CH_FIELD_SYSTEM_SHARED_EVENT_SOURCE = 0xA0D0,
     CH_FIELD_SYSTEM_SHARED_TICKS = 0xA0D1,
     CH_FIELD_SYSTEM_SHARED_DELTA_TICKS = 0xA0D2,
     CH_FIELD_SYSTEM_SHARED_GPS_TIMESTAMP = 0xA0D3,
@@ -656,7 +660,9 @@ public class MipTypes : global::System.IDisposable {
     CH_M7 = 109,
     CH_M8 = 110,
     CH_NANOSECONDS = 111,
-    CH_VALID_FLAGS = 112
+    CH_VALID_FLAGS = 112,
+    CH_PPS_VALID = 113,
+    CH_LAST_PPS = 114
   }
 
 }
